--- a/app/content/settings/manifest.json
+++ b/app/content/settings/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Bluise",
-  "shortName": "Bluise",
-  "description": "A Nuxt.js & Netlify CMS boilerplate.",
-  "themeColor": "#0b3765",
-  "backgroundColor": "#ffffff",
+  "name": "AXA Music",
+  "shortName": "AXA",
+  "description": "AXA Music",
+  "themeColor": "#ffffff",
+  "backgroundColor": "#131313",
   "lang": "en"
 }
